--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,7 +1,8 @@
 <div class="navbar bg-base-100 shadow px-8 lg:px-32">
   <div class="flex-1">
+    <a href="/" class="btn btn-ghost btn-lg font-[Charm] text-2xl">Alphard</a>
   </div>
-  <div class="flex-none">
+  <div class="flex-none flex space-x-2">
     <a href="/sign-in" class="btn btn-ghost">Sign In</a>
     <a href="/get-started" class="btn btn-neutral">Get Started</a>
   </div>
