Added sign_in and get_started pages

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{% endblock %}
+{% block title %}Home - Alphard{% endblock %}
 
 {% block content %}
   {% include "navbar.html" %}
