--- a/blog/templates/sign-in.html
+++ b/blog/templates/sign-in.html
@@ -3,4 +3,44 @@
 {% block title %}Sign In - Alphard{% endblock %}
 
 {% block content %}
+  <div class="flex justify-center items-center h-screen">
+    <form method="POST" class="w-72 flex flex-col space-y-4.5">
+      <div class="text-center font-[Charm] text-4xl pb-2">Alphard</div>
+      {% csrf_token %}
+      <div class="flex flex-col space-y-2 floating-label">
+        <span>Username</span>
+        <input placeholder="Username" name="username" autocapitalize="none" autocomplete="username" maxLength="150" class="input" autofocus required>
+        {% for error in form.username.errors %}
+          <div class="alert alert-error">
+            {% include "icons/error.svg" %}
+            {{ error }}
+          </div>
+        {% endfor %}
+      </div>
+      <div class="flex flex-col space-y-2 floating-label">
+        <span>Password</span>
+        <input type="password" placeholder="Password" name="password" autocomplete="current-password" class="input" required>
+        {% for error in form.password.errors %}
+          <div class="alert alert-error">
+            {% include "icons/error.svg" %}
+            {{ error }}
+          </div>
+        {% endfor %}
+      </div>
+      {% if form.non_field_errors %}
+        <div class="flex flex-col space-y-1">
+          {% for error in form.non_field_errors %}
+            <div class="alert alert-error">
+              {% include "icons/error.svg" %}
+              {{ error }}
+            </div>
+          {% endfor %}
+        </div>
+      {% endif %}
+      <div class="flex flex-col space-y-2">
+        <button type="submit" class="btn btn-neutral">Sign In</button>
+        <a href="/get-started" class="btn">Don&apos;t have an account?</a>
+      </div>
+    </form>
+  </div>
 {% endblock %}
