--- a/blog/templates/sign-in.html
+++ b/blog/templates/sign-in.html
@@ -39,7 +39,7 @@
       {% endif %}
       <div class="flex flex-col space-y-2">
         <button type="submit" class="btn btn-neutral">Sign In</button>
-        <a href="/get-started" class="btn">Don&apos;t have an account?</a>
+        <a href="{% url "get_started" %}" class="btn">Don&apos;t have an account?</a>
       </div>
     </form>
   </div>
