--- a/blog/templates/sign-in.html
+++ b/blog/templates/sign-in.html
@@ -20,6 +20,7 @@
       <div class="flex flex-col space-y-2 floating-label">
         <span>Password</span>
         <input type="password" placeholder="Password" name="password" autocomplete="current-password" class="input" required>
+        <a href="{% url "request_password_reset" %}" class="text-[13px] text-center hover:underline">Forgot Password?</a>
         {% for error in form.password.errors %}
           <div class="alert alert-error">
             {% include "icons/error.svg" %}
