--- a/blog/templates/password-reset-request-done.html
+++ b/blog/templates/password-reset-request-done.html
@@ -1,6 +1,30 @@
 {% extends "base.html" %}
 
-{% block title %} - Alphard{% endblock %}
+{% block title %}Password Reset Requested - Alphard{% endblock %}
 
 {% block content %}
+  <div class="flex justify-center items-center h-screen px-4">
+    <div class="card max-w-md shadow-lg bg-base-100">
+      <div class="card-body space-y-2 text-center">
+        <div class="text-2xl font-semibold">Check your email</div>
+        <div>
+          <div>We sent a password reset link to <span class="font-medium">{{ email }}</span>.</div>
+          <div>Open your inbox and follow the link to continue.</div>
+        </div>
+        <div class="flex flex-col space-y-2 pt-2">
+          <form method="GET">
+            <button class="btn btn-neutral w-full">
+              Resend email
+            </button>
+          </form>
+          <form method="POST">
+            {% csrf_token %}
+            <button class="btn w-full">
+              Use a different email
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
