--- a/blog/templates/email/reset-password.html
+++ b/blog/templates/email/reset-password.html
@@ -2,13 +2,13 @@
 <html>
   <body style="font-family: Arial, Helvetica, sans-serif; line-height: 1.6; margin: 20px;">
     <p style="margin-bottom: 20px;">{% if full_name %}Hi {{ full_name }},{% else %}Hi,{% endif %}</p>
-    <p style="margin-bottom: 20px;">A request was made to reset the password for your account. You can continue the process using the link below:</p>
+    <p style="margin-bottom: 20px;">A password reset request was made for your account. You can continue the process by clicking on the link below:</p>
     <p style="margin-bottom: 20px;">
       <a href="{{ reset_url }}" style="display: inline-block; padding: 12px 22px; color: #ffffff; background-color: #000000; text-decoration: none; border-radius: 4px;">
         Reset your password
       </a>
     </p>
-    <p style="margin-bottom: 20px;">If you didn&apos;t make this request, please contact the site administrators.</p>
+    <p style="margin-bottom: 20px;">If you didn’t make this request, please contact the site administrators.</p>
     <p>Thank you,</p>
   </body>
 </html>
