Updated templates and removed static links further

--- a/blog/templates/get-started-done.html
+++ b/blog/templates/get-started-done.html
@@ -8,7 +8,7 @@
       <div class="card-body space-y-2 text-center">
         <div class="text-2xl font-semibold">Check your email</div>
         <div>
-          <div>We sent a verification link to <span class="font-medium">{{ email }}</span>.</div>
+          <div>We’ve sent a verification link to <span class="font-medium">{{ email }}</span>.</div>
           <div>Open your inbox and click the link to continue.</div>
         </div>
         <div class="flex flex-col space-y-2 pt-2">
