--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -12,8 +12,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Charm:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
 </head>
-<body>
-    {% block content %}
-    {% endblock %}
-</body>
+<body>{% block content %}{% endblock %}</body>
 </html>
