--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -10,6 +10,7 @@
         </div>
         <ul tabindex="-1" class="dropdown-content menu bg-base-100 rounded-box w-48 shadow">
           <li><a href="{% url "profile" username=request.user.username %}" class="w-44 btn btn-ghost">My Profile</a></li>
+          <li><a href="{% url "user_settings" %}" class="w-44 btn btn-ghost">Account Settings</a></li>
           {% if request.user.is_staff %}
             <li><a href="{% url "admin:index" %}" class="w-44 btn btn-ghost">Admin Dashboard</a></li>
           {% endif %}
