--- a/users/templates/get-started.html
+++ b/users/templates/get-started.html
@@ -3,4 +3,134 @@
 {% block title %}Get Started - Alphard{% endblock %}
 
 {% block content %}
+    <div class="flex justify-center mt-24 mb-24">
+    <form method="post" class="w-96 flex flex-col items-center space-y-4 p-8 border border-gray-100 shadow">
+        <div class="font-[Charm] font-bold text-4xl pb-2">Alphard</div>
+
+        {% csrf_token %}
+
+        <div class="w-full flex flex-col space-y-2 floating-label">
+            <span>Full Name (Optional)</span>
+            <input
+                name="full_name"
+                placeholder="Full Name (Optional)"
+                value="{{ form.full_name.value|default:'' }}"
+                autocomplete="name"
+                maxlength="150"
+                class="input"
+            />
+            {% for error in form.full_name.errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+
+        <div class="w-full flex flex-col space-y-2 floating-label">
+            <span>Username</span>
+            <div class="w-full tooltip">
+                <div class="tooltip-content text-xs">
+                    {{ form.username.help_text }}
+                </div>
+                <input
+                    name="username"
+                    placeholder="Username"
+                    value="{{ form.username.value|default:'' }}"
+                    autocomplete="username"
+                    maxlength="150"
+                    class="input"
+                    required
+                />
+            </div>
+            {% for error in form.username.errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+
+        <div class="w-full flex flex-col space-y-2 floating-label">
+            <span>Email address</span>
+            <input
+                name="email"
+                placeholder="Email address"
+                value="{{ form.email.value|default:'' }}"
+                autocomplete="email"
+                maxlength="254"
+                class="input"
+                required
+            />
+            {% for error in form.email.errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+
+        <div class="w-full flex flex-col space-y-2 floating-label">
+            <span>Password</span>
+            <div class="w-full tooltip">
+                <div class="tooltip-content text-xs text-left">
+                    {{ form.password1.help_text }}
+                </div>
+                <input
+                    type="password"
+                    name="password1"
+                    placeholder="Password"
+                    autocomplete="new-password"
+                    class="input"
+                    required
+                />
+            </div>
+            {% for error in form.password1.errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+
+        <div class="w-full flex flex-col space-y-2 floating-label">
+            <span>Confirm Password</span>
+            <input
+                type="password"
+                name="password2"
+                placeholder="Confirm Password"
+                autocomplete="new-password"
+                class="input"
+                required
+            />
+            {% for error in form.password2.errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+
+        {% if form.non_field_errors %}
+        <div class="flex flex-col space-y-2">
+            {% for error in form.non_field_errors %}
+            <div class="alert alert-error">
+                {% include "components/icons/error.svg" %}
+                {{ error }}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        <button type="submit" class="w-full btn btn-neutral">
+            Sign Up
+        </button>
+
+        <hr class="w-1/3 text-gray-300 mt-1.5 pb-1.5" />
+
+        <div class="w-full">
+            <a class="w-full btn">Already have an account?</a>
+        </div>
+    </form>
+    </div>
 {% endblock %}
