--- a/users/templates/get-started.html
+++ b/users/templates/get-started.html
@@ -129,7 +129,9 @@
         <hr class="w-1/3 text-gray-300 mt-1.5 pb-1.5" />
 
         <div class="w-full">
-            <a class="w-full btn">Already have an account?</a>
+            <a href="{% url 'sign_in' %}" class="w-full btn">
+                Already have an account?
+            </a>
         </div>
     </form>
     </div>
